# DANGO

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
Code/: GPR.py  LBFGS.py  Modules.py  main.py  model.py  process.py  train.py  utils.py
Code/scripts/: dango_testing.py  get_esm_embeddings.py
data/: .gitignore
data/yeast_network/: yeast_string_genes.txt
